[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Blackdog"
version = "0.1.0"
authors = [
    {name = "Sirius Wu", email = "ccwu660601@gmail.com"},
]
description = "Some youtuber's Project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
blackdog = "blackdog.youtuber:main"